# hotplex

./: .env.example  .gitignore  .goreleaser.yaml  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.full  Dockerfile.java  Dockerfile.node  Dockerfile.python  Dockerfile.rust  INSTALL.md  INSTALL_zh.md  LICENSE  Makefile  PROMOTION_PLAN.md  README.md  README_zh.md  SECURITY.md  client.go  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum  hotplex.go  install.sh  provider_test.go  runner_test.go  session_manager_test.go  session_test.go  testutils_test.go  websocket_test.go
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
_examples/: README.md
brain/: config.go  guard.go  init.go  memory.go  router.go
chatapps/: config.go  dingtalk.go  engine_handler.go  interface_test.go  manager.go  metrics.go  processor_aggregator.go  processor_chain.go  processor_chain_test.go  processor_zone_order.go  provider_integration_test.go  setup.go  types.go
configs/: server.yaml
docker/: Dockerfile  Dockerfile.artifacts  Dockerfile.base  Dockerfile.full  Dockerfile.golang  Dockerfile.java  Dockerfile.node  Dockerfile.python  Dockerfile.release  Dockerfile.rust  README.md  docker-entrypoint.sh
docs/: CONFIGURATION.md  CONFIGURATION_zh.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_zh.md  README.md  README_zh.md  architecture.md  architecture_zh.md  (+17 more)
docs-site/: .gitignore  README.md  content-strategy.md  index.md
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: opencode_stream.py
sdks/python/hotplex/: __init__.py  opencode.py
(+188 files in other folders)
